Update homepage image styling and positioning

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,13 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION} >
   <Container>
+    
     <div>
       <section class="animate space-y-4" id="article">
 
         <ArrowCardStatic />
+
+        <p/><br/><p/>
 
         <p><b> Times have changed</b></p>
 
@@ -50,7 +53,8 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
         In this book, we'll look at the things we do and eat though the eyes of 
         <b>"A caveman's guide to surviving the modern industrial landscape"</b>.
       </p>
-      <img src="/images/caveman-rem.png" alt="food" />
+      <p/><br/><p/>
+      <!-- <img src="/images/caveman-rem.png" alt="food" /> -->
       <ArrowCardStatic />  
     </div>
     </section>
