processed pand to in proc nightmare

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
           Why?
         </p>
         <p>
-        As a person who woke up one day to find out he had heart disease and needed
-        bypass surgery, I endeavored to find out.
+        <!-- As a person who woke up one day to find out he had heart disease and needed
+        bypass surgery, I endeavored to find out. -->
 
     
       <p>
