--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,36 +15,36 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
 
         <p/><br/><p/>
 
-        <p><b> Times have changed</b></p>
+        <h2> Times have changed</h2>
 
         <p>
           For the first time in modern history, life expectancy is decreasing.
           Why?
         </p>
         <p>
-        <!-- As a person who woke up one day to find out he had heart disease and needed
-        bypass surgery, I endeavored to find out. -->
-
+         As a person who woke up one day to find out he had heart disease and needed
+        bypass surgery, I endeavored to find out.
+        </p>
     
+      <h2>You are what you eat</h2>
+      
       <p>
-        <b>You are what you eat</b>
-      </p>
-      <p>
-        A large measure of the problem is the food we eat. If you eat processed
+        If you eat processed
         "food" you will end up with any number of chronic diseases. Most of
         them because of insulin resistance - but the story is more complex than
         that.
       </p>
-      <!--p>
-        People often talk about the idea of health as a way of living like our
-        ancient ancestors did. It's about getting back to basics and embracing a
-        simpler lifestyle. This concept revolves around the belief that our
-        bodies are best suited to the types of foods, activities, and
-        environments that our early human ancestors experienced.
-      </p-->
       <p>
-        <b>Starting with a first principle</b>
+        People often talk about living like our
+        ancient ancestors. This concept revolves around the belief that our
+        bodies are best suited to the types of foods, activities, and
+        environments that our early human ancestors experienced - without processed food.
       </p>
+      <!--p>
+      Douglas Adam 
+        In a rather peculiar twist of evolutionary irony, some people have taken to suggesting we should live like our ancient ancestors - you know, those charming fellows who spent their days running after woolly mammoths and hadn't yet discovered the dubious pleasures of microwaveable pizza. The logic, which is almost sensible enough to make one's brain itch, suggests that our bodies might actually prefer the sort of foods and lifestyle choices that didn't come with a barcode and 47 artificial preservatives. Terribly inconvenient, but there you have it.
+      </p-->
+      <h2>Starting with a first principle</h2>
       <p>
         What is different about the food we eat today compared to the food our
         ancestors ate 150 years ago? What do we <b>do</b> differently?
