--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
         People often talk about living like our
         ancient ancestors. This concept revolves around the belief that our
         bodies are best suited to the types of foods, activities, and
-        environments that our early human ancestors experienced - without processed food.
+        environments that our early human ancestors experienced.
       </p>
       <!--p>
       Douglas Adam 
