Refactor styling for improved dark mode support and consistency across components; update book title for clarity

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE } from "@consts";
   <Container>
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
-        <div class="font-semibold">
+        <div class="text-white hover:text-white/50 text-3xl">
           {SITE.TITLE}
         </div>
         <div class="text-xs text-neutral-500">
@@ -19,7 +19,7 @@ import { SITE } from "@consts";
         <button
           id="magnifying-glass"
           aria-label="Search"
-          class="flex items-center rounded border border-black/15 bg-neutral-100 px-2 py-1 text-xs transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:bg-neutral-900 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
+          class="flex items-center rounded border border-white/20 bg-neutral-900 px-2 py-1 text-xs transition-colors duration-300 ease-in-out hover:bg-white/25 hover:text-white focus-visible:bg-white/25 focus-visible:text-white"
         >
           <svg
             height="16"
