--- a/src/components/PageFind.astro
+++ b/src/components/PageFind.astro
@@ -8,7 +8,7 @@ import Search from "astro-pagefind/components/Search";
 >
   <div
     id="pagefind-container"
-    class="m-0 flex h-fit max-h-[80%] w-full max-w-screen-sm flex-col overflow-auto rounded border border-black/15 bg-neutral-100 p-2 px-4 py-3 shadow-lg dark:border-white/20 dark:bg-neutral-900"
+    class="m-0 flex h-fit max-h-[80%] w-full max-w-screen-sm flex-col overflow-auto rounded border border-white/20 bg-neutral-900 p-2 px-4 py-3 shadow-lg"
   >
     <Search
       transition:persist
@@ -20,10 +20,8 @@ import Search from "astro-pagefind/components/Search";
         resetStyles: false,
       }}
     />
-    <div class="mr-2 pb-1 pt-4 text-right text-xs dark:prose-invert">
-      Press <span class="prose text-xs dark:prose-invert"
-        ><kbd class="">Esc</kbd></span
-      > or click anywhere to close
+    <div class="mr-2 pb-1 pt-4 text-right text-xs text-gray-100">
+      Press <kbd class="text-gray-100">Esc</kbd> or click anywhere to close
     </div>
   </div>
 </div>
