--- a/src/pages/book/[...slug].astro
+++ b/src/pages/book/[...slug].astro
@@ -55,7 +55,7 @@ const { Content, headings } = await post.render();
       <BackToPrevious href="/book">Back to book</BackToPrevious>
     </div>
     <div class="my-10 space-y-1">
-      <h1 class="animate text-3xl font-semibold text-black dark:text-white">
+      <h1 class="animate text-3xl font-semibold">
         {post.data.title}
       </h1>
     </div>
