--- a/src/components/ArrowCardStatic.astro
+++ b/src/components/ArrowCardStatic.astro
@@ -1,7 +1,7 @@
    <div class="space-y-16">
       <a
       href="/book/"
-      class="not-prose group relative flex flex-nowrap rounded-lg border border-black/15 px-4 py-3 pr-10 transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
+      class="not-prose group relative flex flex-nowrap rounded-lg border border-white/20 px-4 py-3 pr-10 transition-colors duration-300 ease-in-out hover:bg-white/20 hover:text-white focus-visible:bg-white/20 focus-visible:text-white dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
     >
       <div class="flex flex-1 flex-col truncate">
         <div class="font-semibold">
