feat: add info card to top of homepage with personal update message

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import { SITE } from "@consts";
         <div class="text-white hover:text-white/50 text-3xl">
           {SITE.TITLE}
         </div>
-        <div class="text-xs text-neutral-500">
+        <div class="text-neutral-500">
           {SITE.DESCRIPTION}
         </div>
       </Link>
