--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@ body {
 
 header {
   @apply fixed left-0 right-0 top-0 z-50 py-6;
-  @apply bg-neutral-900/75;
+  @apply bg-black;
   @apply saturate-200 backdrop-blur-sm;
 }
 
