--- a/src/components/ArrowCardStatic.astro
+++ b/src/components/ArrowCardStatic.astro
@@ -1,4 +1,4 @@
-   <div class="space-y-16">
+   <div>
       <a
       href="/book/"
       class="not-prose group relative flex flex-nowrap rounded-lg border border-white/20 px-4 py-3 pr-10 transition-colors duration-300 ease-in-out hover:bg-white/20 hover:text-white focus-visible:bg-white/20 focus-visible:text-white dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
