--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/Container.astro";
 import { SITE, HOME, SOCIALS } from "@consts";
 import ArrowCardStatic from "@components/ArrowCardStatic.astro";
+import Callout from "@components/Callout.astro";
 ---
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION} >
@@ -10,10 +11,23 @@ import ArrowCardStatic from "@components/ArrowCardStatic.astro";
     
     <div>
       <section class="animate space-y-4" id="article">
+          <p/><br/></p>
+        
+        <Callout type="info">
+          <div class="flex flex-col space-y-2">
+            <div class="font-semibold">
+            Update
+            </div>
+            <div class="text-sm">
 
+              I could be wrong about everything. I had a stroke.
+            </div>
+          </div>
+        </Callout>
+        
         <ArrowCardStatic />
-
-        <p/><br/><p/>
+        <p/><br/></p>
+       
 
         <h2> Times have changed</h2>
 
